RESOLVED FIXED165069
Fix unused-private-field build warning in WebKit2/Platform/SharedMemory.h
https://bugs.webkit.org/show_bug.cgi?id=165069
Summary Fix unused-private-field build warning in WebKit2/Platform/SharedMemory.h
Csaba Osztrogonác
Reported 2016-11-25 02:38:57 PST
../../Source/WebKit2/Platform/SharedMemory.h:113:16: warning: private field 'm_protection' is not used [-Wunused-private-field] Protection m_protection; ^ 1 warning generated. m_protection is only used by SharedMemoryCocoa.cpp, but not used by SharedMemoryUnix.cpp
Attachments
Patch (1.09 KB, patch)
2016-11-25 02:44 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-11-25 02:44:03 PST
WebKit Commit Bot
Comment 2 2016-11-27 10:14:56 PST
Comment on attachment 295420 [details] Patch Clearing flags on attachment: 295420 Committed r208990: <http://trac.webkit.org/changeset/208990>
WebKit Commit Bot
Comment 3 2016-11-27 10:14:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.