Fix unused-private-field build warning in WebKit2/Platform/SharedMemory.h https://bugs.webkit.org/show_bug.cgi?id=165069

Reviewed by Darin Adler.

* Platform/SharedMemory.h:


Canonical link: https://commits.webkit.org/182698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208990 268f45cc-cd09-0410-ab3c-d52691b4dbfc